<resources>
    <string name="app_name">Pikapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tooltip">"Harga belum termasuk \n pajak dan biaya layanan"</string>
    <string name="kebijakan_privasi">
        Dengan memilih salah satu pilihan, anda setuju
    </string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="kembali">Kembali</string>
    <string name="simpan">Simpan</string>
    <string name="ya">Ya</string>
    <string name="kirim">Kirim</string>
    <string name="cek_lagi">Cek Lagi</string>
    <string name="star">*</string>
    <string name="ok">OK</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="akan_datang">Akan Datang</string>
    <string name="pelajari_lebih_lanjut">Pelajari lebih lanjut</string>
    <string name="alert_dialog">Apakah anda yakin ingin menghapus menu ini?</string>
    <string name="alert_dialog_menuChoice">Anda yakin ingin menghapus pilihan ini dari menu restoran Anda?</string>
    <string name="tolak">Tolak</string>
    <string name="pesanan_siap">Pesanan Siap</string>
    <string name="tracking_order">Lacak Pengiriman</string>
    <string name="dialog_pilih_bank">Pilih Bank</string>
    <string name="bank_bca">BANK CENTRAL ASIA (BCA)</string>
    <string name="bank_bni">BANK NEGARA INDONESIA (BNI)</string>
    <string name="bank_bri">BANK RAKYAT INDONESIA (BRI)</string>
    <string name="bank_mandiri">BANK MANDIRI</string>
    <string name="bank_cimb">BANK CIMB NIAGA</string>
    <string name="general_notif_id">pikappnotif</string>
    <string name="general_notif_title">Satu langkah lagi untuk kemudahan bisnis Anda!</string>
    <string name="general_notif_message">Silakan cek email Anda dan lakukan konfirmasi integrasi</string>
    <string name="notification_channel_name">PikApp</string>
    <string name="notification_channel_description">Email reminder</string>
    <string name="cd_change_order_button">Change order button</string>
    <string name="carousel_1_header">Menu Digital, \nScan QR</string>
    <string name="carousel_1_header_preview">Menu Digital, <br />Scan QR</string>
    <string name="carousel_1_body">Permudah bisnis Anda dengan QR digital menu yang terhubung langsung dengan PikApp.</string>
    <string name="carousel_2_header">Mudah dalam satu \ngenggaman</string>
    <string name="carousel_2_header_preview">Mudah dalam satu <br />genggaman</string>
    <string name="carousel_2_body">Atur menu, pencatatan, terima order, pilihan pembayaran, hanya dalam satu aplikasi.</string>
    <string name="carousel_3_header">Selamat Datang di \nPikApp!</string>
    <string name="carousel_3_header_preview">Selamat Datang di <br />PikApp!</string>
    <string name="sudah_punya_akun">Sudah punya akun?&#160;</string>
    <string name="setuju_kebijakan_privasi">Dengan mendaftar, Anda setuju dengan <u>Aturan Penggunan dan Kebijakan Privasi</u> yang berlaku</string>
    <string name="registrasi_restoran_header">Registrasi Restoran</string>
    <string name="registrasi_email_header">Email&#160;</string>
    <string name="registrasi_email_hint">Contoh: example@gmail.com</string>
    <string name="registrasi_nama_lengkap_header">Nama Lengkap&#160;</string>
    <string name="registrasi_nama_lengkap_hint">Masukkan nama anda</string>
    <string name="registrasi_nomor_hp_header">No. HP&#160;</string>
    <string name="registrasi_nomor_hp_hint">Contoh: 08xxxxxxxxxx</string>
    <string name="registrasi_pin_header">PIN&#160;</string>
    <string name="registrasi_pin_hint">Masukkan 6 digit PIN</string>
    <string name="registrasi_nama_restoran_header">Nama Restoran&#160;</string>
    <string name="registrasi_nama_restoran_hint">Masukkan nama restoran anda</string>
    <string name="registrasi_nama_foodcourt_header">Nama Foodcourt&#160;</string>
    <string name="registrasi_nama_foodcourt_hint">Isi jika restoran anda berada dalam foodcourt</string>
    <string name="registrasi_alamat_header">Alamat&#160;</string>
    <string name="registrasi_alamat_hint">Contoh: AEON Mall, Jl. abcd No. 14</string>
    <string name="registrasi_nama_bank_header">Nama Bank&#160;</string>
    <string name="registrasi_nama_bank_hint">Pilih bank yang digunakan</string>
    <string name="registrasi_nomor_rekening_header">Nomor Rekening Restoran&#160;</string>
    <string name="registrasi_nomor_rekening_hint">Masukkan nomor rekening bank</string>
    <string name="registrasi_nama_rekening_header">Nama Pemilik Rekening&#160;</string>
    <string name="registrasi_nama_rekening_hint">Masukkan nama pemilik rekening</string>
    <string name="registrasi_ktp_header">KTP Pemilik Restoran&#160;</string>
    <string name="registrasi_ktp_hint">(Format .png, .jpg, max. 1MB)</string>
    <string name="registrasi_logo_header">Logo Restoran&#160;</string>
    <string name="registrasi_logo_hint">(Format .png, .jpg, max. 1MB)</string>
    <string name="registrasi_latar_header">Gambar Latar&#160;</string>
    <string name="registrasi_latar_hint">(Format .png, .jpg, max. 1MB)</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="edit_kategori">Menu yang ada di kategori ini akan tidak  <br />terlihat oleh pembeli. Anda yakin ingin <br />menonaktifkan kategori?</string>
    <string name="delete_kategori_warning">Kosongan menu pada kategori ini <br />terlebih dahulu</string>
    <string name="delete_kategori_popup">Anda yakin ingin menghapus kategori <br />ini dari menu restoran Anda</string>
    <string name="menu">Menu</string>
    <string name="cari_menu_yang_anda_jual">Cari Menu yang Anda jual</string>
    <string name="tambah_kategori_menu">Tambah Kategori Menu</string>
    <string name="tambah_kategori_untuk_menambahkan_menu">Tambah Kategori Untuk Menambahkan Menu</string>
    <string name="anda_belum_memiliki_menu">Anda belum memiliki menu</string>
    <string name="category_header">Kategori</string>
    <string name="category_daftar_kategori_header">Daftar Kategori</string>
    <string name="category_tambah_kategori_header">Tambah Kategori</string>
    <string name="category_ubah_kategori_header">Ubah Kategori</string>
    <string name="category_urutkan_kategori_header">Urutkan Kategori</string>
    <string name="menu_empty_header">Anda belum memiliki menu untuk kategori ini</string>
    <string name="am_main_header">Pilihan Menu</string>
    <string name="am_details_tambah_header">Tambah Pilihan</string>
    <string name="am_details_ubah_header">Ubah Pilihan</string>
    <string name="am_details_urutkan_header">Urutkan Pilihan</string>
    <string name="am_main_aktifkan_header">Aktifkan pilihan menu</string>
    <string name="am_main_aktifkan_help">Apa itu pilihan menu?</string>
    <string name="am_daftar_pilihan_header">Daftar pilihan menu</string>
    <string name="am_tambah_pilihan_header">Tambah Pilihan</string>
    <string name="am_tambah_daftar_pilihan_header">Tambah Daftar Pilihan</string>
    <string name="am_ubah_daftar_pilihan_header">Ubah Daftar Pilihan</string>
    <string name="am_details_nama_pilihan_header">Nama Pilihan</string>
    <string name="am_details_nama_pilihan_hint">contoh: Tingkat Kepedasan, Pilihan Topping</string>
    <string name="am_details_aktif_header">Aktif</string>
    <string name="am_details_wajib_header">Wajib Diisi</string>
    <string name="am_details_pilihan_maksimal_header">Pilihan Maksimal</string>
    <string name="am_details_pilihan_maksimal_kosong">Anda belum menambahkan daftar pilihan</string>
    <string name="am_details_pilihan_maksimal_hint">Masukkan jumlah pilihan maksimal</string>
    <string name="am_details_daftar_pilihan_header">Daftar Pilihan</string>
    <string name="am_details_tambah_daftar_pilihan">Tambah Daftar Pilihan</string>
    <string name="am_additional_nama_daftar_pilihan_header">Nama Daftar Pilihan</string>
    <string name="am_additional_nama_daftar_pilihan_hint">contoh: Pedas, Boba</string>
    <string name="am_additional_harga_header">Harga</string>
    <string name="am_additional_harga_hint">contoh: 6000</string>
    <string name="am_additional_hapus_pilihan">Hapus Pilihan</string>
    <string name="sm_header">Jam Buka Restoran</string>
    <string name="sm_restaurant_status_title">Status Restoran</string>
    <string name="sm_restaurant_openhours_title">Buka-Tutup Otomatis</string>
    <string name="sm_restaurant_status_detail_open">Restoran Anda sedang berada di jam buka</string>
    <string name="sm_restaurant_status_detail_close">Restoran Anda sedang berada di jam tutup</string>
    <string name="sm_restaurant_status_detail_temp_close">Silakan nyalakan buka tutup otomatis dibawah untuk membuka toko Anda</string>
    <string name="sm_restaurant_auto_status">Restoran akan buka dan tutup secara otomatis mengikuti jadwal restoran</string>
    <string name="sm_restaurant_schedule_title">Jadwal Restoran</string>
    <string name="sm_open_close_popup">Menonaktifkan Buka-Tutup Otomatis akan membuat status toko Anda tutup. <br /> Apakah Anda ingin melanjutkan?</string>
    <string name="sm_close_open_popup">Menaktifkan Buka-Tutup Otomatis akan membuat status toko Anda buka pada waktu yang terjadwal. <br /> Apakah Anda ingin melanjutkan?</string>
    <string name="sm_status_header">Ubah Jadwal</string>
    <string name="Buka_24_Jam">Buka 24 Jam</string>
    <string name="Tutup">Tutup</string>
    <string name="radio_button_3">Atur Jam</string>
    <string name="open_status_title">Buka</string>
    <string name="shop_daily_status">%s, %s</string>
    <string name="menu_yang_anda_cari_tidak_ditemukan">Menu Yang Anda Cari Tidak Ditemukan</string>
    <string name="no_found">no found</string>
    <string name="header">header</string>
    <string name="test">test</string>
    <string name="gambar_menu">gambar menu</string>
    <string name="cari_menu">Cari Menu</string>
    <string name="rekening_bank">Rekening Bank</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="ubah">Ubah</string>
    <string name="masukkan_pin_anda">Masukkan Pin Anda</string>
    <string name="ubah_rekening_bank">Ubah Rekening Bank</string>
    <string name="must">*</string>
    <string name="masukkan_nama_pemilik_rekening">Masukkan Nama Pemilik Rekening</string>
    <string name="profile_title">Profile</string>
    <string name="pin_title">Pin</string>
    <string name="account_title">No. Rekening</string>
    <string name="information_title">Informasi</string>
    <string name="openHours_title">Jam Buka Restoran</string>
    <string name="shipping_title">Pengiriman</string>
    <string name="paymentMethod_title">Metode Pembayaran</string>
    <string name="ppn_title">Pajak Restoran</string>
    <string name="filter_report_title">Filter Laporan</string>
    <string name="filter_report_header">Tampilkan data berdasarkan</string>
    <string name="filter_today">Hari ini</string>
    <string name="filter_yesterday">Kemarin</string>
    <string name="filter_last2day">2 Hari yang lalu</string>
    <string name="filter_this_week">Minggu ini</string>
    <string name="filter_last_week">Minggu lalu</string>
    <string name="filter_this_month">Bulan ini</string>
    <string name="filter_last_month">Bulan lalu</string>
    <string name="radio_text">Custom</string>
    <string name="filter_start_date_header">Dari Tanggal :</string>
    <string name="filter_end_date_header">Sampai Tanggal :</string>
    <string name="filter_next_button">Terapkan</string>
    <string name="customer_name">Sukro</string>
    <string name="customer_phone">0812123123123</string>
    <string name="customer_address">Jl. Kuda kuda No 10</string>
    <string name="customer_address_detail">Catatan : </string>
</resources>