<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:id="@+id/linearLayout_shopmgmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:fontFamily="@font/inter_semibold"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/customerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_phone"
                android:fontFamily="@font/inter_regular"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/customerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/customer_address"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/customerAddressDetailHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/customer_address_detail"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/customerAddressDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/test"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>



        </LinearLayout>

        <TextView
            android:id="@+id/customerEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/ubah"
            android:fontFamily="@font/inter_bold"
            android:textSize="12sp"
            android:textColor="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>