<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.other.otherReport.FilterPageReport">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/backImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/backText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/kembali"
                    android:textColor="@color/textSubtle"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/backImage"
                    app:layout_constraintStart_toEndOf="@id/backImage"
                    app:layout_constraintTop_toTopOf="@id/backImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/filterReportTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_report_title"
                android:textSize="23sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/filterReportHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_report_header"
            android:textSize="13sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerReport"/>

        <Button
            android:id="@+id/today"
            android:layout_width="70dp"
            android:layout_height="37dp"
            android:textAllCaps="false"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_green_square"
            android:text="@string/filter_today"
            android:textSize="12sp"
            android:fontFamily="@font/proximanova_regular"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterReportHeader"/>

        <Button
            android:id="@+id/yesterday"
            android:layout_width="70dp"
            android:layout_height="37dp"
            android:textAllCaps="false"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_square_btn"
            android:text="@string/filter_yesterday"
            android:textSize="12sp"
            android:fontFamily="@font/proximanova_regular"
            android:textColor="@color/tooltipText"
            app:layout_constraintStart_toEndOf="@+id/today"
            app:layout_constraintTop_toBottomOf="@id/filterReportHeader"/>

        <Button
            android:id="@+id/last2day"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:textAllCaps="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_square_btn"
            android:text="@string/filter_last2day"
            android:textSize="12sp"
            android:fontFamily="@font/proximanova_regular"
            android:textColor="@color/tooltipText"
            app:layout_constraintStart_toEndOf="@+id/yesterday"
            app:layout_constraintTop_toBottomOf="@id/filterReportHeader"/>

        <Button
            android:id="@+id/thisWeek"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:textAllCaps="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/gray_square_btn"
            android:text="@string/filter_this_week"
            android:textSize="12sp"
            android:fontFamily="@font/proximanova_regular"
            android:textColor="@color/tooltipText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/today"/>

        <Button
            android:id="@+id/lastWeek"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:textAllCaps="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/gray_square_btn"
            android:text="@string/filter_last_week"
            android:textSize="12sp"
            android:fontFamily="@font/proximanova_regular"
            android:textColor="@color/tooltipText"
            app:layout_constraintStart_toEndOf="@+id/thisWeek"
            app:layout_constraintTop_toBottomOf="@+id/yesterday"/>

        <Button
            android:id="@+id/thisMonth"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:textAllCaps="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/gray_square_btn"
            android:text="@string/filter_this_month"
            android:textSize="12sp"
            android:fontFamily="@font/proximanova_regular"
            android:textColor="@color/tooltipText"
            app:layout_constraintStart_toEndOf="@+id/lastWeek"
            app:layout_constraintTop_toBottomOf="@+id/last2day"/>

        <Button
            android:id="@+id/lastMonth"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:textAllCaps="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/gray_square_btn"
            android:text="@string/filter_last_month"
            android:textSize="12sp"
            android:fontFamily="@font/proximanova_regular"
            android:textColor="@color/tooltipText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thisWeek"/>

        <!--<RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastMonth"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">

            <RadioButton
                android:id="@+id/customRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_text"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="12sp"/>

            <RadioButton
                android:id="@+id/testRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test" />

        </RadioGroup>-->

        <ImageView
            android:id="@+id/filterCustom"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/icon_filter_custom_off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastMonth"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_filter_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/radio_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/filterCustom"
            app:layout_constraintStart_toEndOf="@id/filterCustom"
            app:layout_constraintTop_toTopOf="@id/filterCustom" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/customBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="filterCustom,tv_filter_custom" />

        <TextView
            android:id="@+id/startDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_start_date_header"
            android:fontFamily="@font/proximanova_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_filter_custom"/>

        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:focusable="false"
            android:enabled="false"
            android:background="@drawable/gray_square_btn"
            android:backgroundTint="@color/borderSubtle"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateHeader"/>

        <TextView
            android:id="@+id/endDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_end_date_header"
            android:fontFamily="@font/proximanova_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDate"/>

        <EditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:focusable="false"
            android:enabled="false"
            android:background="@drawable/gray_square_btn"
            android:backgroundTint="@color/borderSubtle"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDateHeader"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/button_green_small"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat"
            android:text="@string/filter_next_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
